# stakeing-phase2

./: .gitignore  Anchor.toml  package.json
programs/demr/: Cargo.toml
programs/demr/src/: lib.rs
programs/mock_nft/: Cargo.toml
programs/mock_nft/src/: lib.rs
programs/staking_phase_2/: Cargo.toml
programs/staking_phase_2/src/: errors.rs  lib.rs  seeds.rs  state.rs
programs/staking_phase_2/src/instructions/: claim.rs  init_staking.rs  mod.rs  open_box.rs  stake.rs  swap_box.rs  unstake.rs  update_pool_info.rs
scripts/: demr.ts  demr_nft.ts  staking.ts  staking_phase_1.ts  staking_phase_1_prod.ts  staking_phase_2.ts
tests/: staking.ts  staking_phase_2.ts
