[package]
name = "mock_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [
    "spl-associated-token-account",
    "spl-token",
    "mpl-token-metadata",
    "metadata",
] }
spl-token = "4.0.0"
solana-program = "1.16.15"
borsh = "0.9.1"